Alpha file load
+ Balanced arrow attack.
+ Speed buffs are greater,
+ Speed buffs are temporary.
- Alpha loading created.

--- a/game.html
+++ b/game.html
@@ -116,11 +116,10 @@
 					onclick = "lensOfTruthUpgrade();"
 				>Buy/Up Lens of Truth -[cost]</div>
 
-				<div id="loadFile" class="clickable-button"
-					onclick = "loadFile();"
-				>Load File</div>
-
-				<input id="loadFileUpload" type="file" value="Browse for Save File"/>
+				<div class="clickable-button" >
+					Load File
+					<input id="loadFileUpload" type="file" ></input>
+				</div>
         
 				<div id="saveFile" class="clickable-button"
 				>Save File</div>
