--- a/game.html
+++ b/game.html
@@ -12,6 +12,11 @@
 		/>
 	</head>
 	<body onload="init()">
+		<textarea id="overlay-touch">
+			MMM
+		    MMM
+			MMM
+		</textarea>
 
 		<div id="gameWindow">
 			<div id = "tiles">
@@ -81,6 +86,15 @@
 				<div id = "slower"  class="clickable-button"
 					type = "button" onclick = "decreaseGameSpeed();">
 					Decrease Game Speed
+				</div>
+				
+				<div  class="clickable-button"
+					type = "button" onclick = "decreaseConsole();">
+					Shorter Console
+				</div>
+				<div  class="clickable-button"
+					type = "button" onclick = "increaseConsole();">
+					Longer Console
 				</div>
 				
 				<div class="clickable-button" >
