issues/12 - Many items can now drop.  Monsters also get FLOOR of max HP so they stay as integers.

--- a/game.html
+++ b/game.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
 		<title> 
-			The Legend of Zelda - JavaScript Edition - v1.1.1
+			The Legend of Zelda - JavaScript Edition - v1.1.2
 		</title>
 		<meta charset="utf-8"/>
 		<link 
@@ -99,7 +99,7 @@
 				
 				<div class="clickable-button" >
 					Load File
-					<input id="loadFileUpload" type="file" ></input>
+					<input id="loadFileUpload" type="file" />
 				</div>
         
 				<div id="saveFile" class="clickable-button">
@@ -148,6 +148,7 @@
 			<script type = "text/javascript" src = "js/methods.js" ></script>
 			<script type = "text/javascript" src = "js/controls.js" ></script>
 			<script type = "text/javascript" src = "js/statics.js" ></script>
+			<script type = "text/javascript" src = "js/drop.js" ></script>
 			<script type = "text/javascript" src = "js/player.js" ></script>
 			<script type = "text/javascript" src = "js/foe.js" ></script>
 			<script type = "text/javascript" src = "js/main.js" ></script>
