issues/24 - When HP is full, hearts should not drop. When HP only has one heart damaged, hearts should drop less often. When HP is 2 hearts or less, hearts should drop more often.

--- a/game.html
+++ b/game.html
@@ -143,15 +143,16 @@
 
 		</div><!-- #gui -->
 		<footer>
-			<script type = "text/javascript" src = "js/globals.js" ></script>
-			<script type = "text/javascript" src = "js/classes.js" ></script>
-			<script type = "text/javascript" src = "js/methods.js" ></script>
-			<script type = "text/javascript" src = "js/controls.js" ></script>
-			<script type = "text/javascript" src = "js/statics.js" ></script>
-			<script type = "text/javascript" src = "js/drop.js" ></script>
-			<script type = "text/javascript" src = "js/player.js" ></script>
-			<script type = "text/javascript" src = "js/foe.js" ></script>
-			<script type = "text/javascript" src = "js/main.js" ></script>
+			<script type="text/javascript" src="js/combat-strategy.js"></script>
+			<script type="text/javascript" src="js/globals.js"></script>
+			<script type="text/javascript" src="js/classes.js"></script>
+			<script type="text/javascript" src="js/methods.js"></script>
+			<script type="text/javascript" src="js/controls.js"></script>
+			<script type="text/javascript" src="js/statics.js"></script>
+			<script type="text/javascript" src="js/drop.js"></script>
+			<script type="text/javascript" src="js/player.js"></script>
+			<script type="text/javascript" src="js/foe.js"></script>
+			<script type="text/javascript" src="js/main.js"></script>
 		</footer>
 	</body>
 		
